--- a/index.html
+++ b/index.html
@@ -2,114 +2,87 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Subway Stories</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
-
-    <!-- MATERIAL DESIGN LINKS -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
+      integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47"
+      crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
-    />
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </head>
-
-  <body class="backimage">
-    <div class="maincontainer">
-      <div>
-        <h1>Subway Stories</h1>
+  <body>
+    <div class="mainContainer">
+      <div class="pure-g">
+        <div class="pure-u-5-5 header"><h1>Subway Stories</h1></div>
       </div>
-
-      <div class="numberChoices">
-        <div class="mainNumber" id="oneTrain">
-          <img class="imageNumber" src="assets/images/1.png" alt="One Train" />
-        </div>
-        <div class="mainNumber" id="twoTrain">
-          <img class="imageNumber" src="assets/images/2.png" alt="Two Train" />
-        </div>
-        <div class="mainNumber" id="threeTrain">
-          <img
-            class="imageNumber"
-            src="assets/images/3.png"
-            alt="Three Train"
-          />
-        </div>
+      <div class="pure-g numberChoices">
+        <div class="pure-u-md-1-3 mainNumber" id="oneTrain"><h2>1</h2></div>
+        <div class="pure-u-md-1-3 mainNumber" id="twoTrain"><h2>2</h2></div>
+        <div class="pure-u-md-1-3 mainNumber" id="threeTrain"><h2>3</h2></div>
       </div>
-
       <div id="oneTrainCard">
-        <div class="northbound" id="northbound-one"><h2>Northbound</h2></div>
-        <img class="routeImage" src="assets/images/1train.png" alt="1 Train" />
-        <div class="southbound" id="southbound-one"><h2>Southbound</h2></div>
+        <div class="pure-g">
+          <div class="pure-u-md-1"><h3 id="northbound-one">Northbound</h3></div>
+        </div>
+        <div class="pure-g">
+          <div class="vl"></div>
+        </div>
+        <div class="pure-g" style="padding: 0;">
+          <div class="pure-u-md-1 mainNumber"><h2>1</h2></div>
+        </div>
+        <div class="pure-g">
+          <div class="vlb"></div>
+        </div>
+        <div class="pure-g">
+          <div class="pure-u-md-1"><h3 id="southbound-one">Southbound</h3></div>
+        </div>
       </div>
-
       <div id="twoTrainCard">
-        <div class="northbound" id="northbound-two"><h2>Northbound</h2></div>
-        <img class="routeImage" src="assets/images/2train.png" alt="2 Train" />
-        <div class="southbound" id="southbound-two"><h2>Southbound</h2></div>
+        <div class="pure-g">
+          <div class="pure-u-md-1"><h3 id="northbound-two">Northbound</h3></div>
+        </div>
+        <div class="pure-g">
+          <div class="vl"></div>
+        </div>
+        <div class="pure-g" style="padding: 0;">
+          <div class="pure-u-md-1 mainNumber"><h2>2</h2></div>
+        </div>
+        <div class="pure-g">
+          <div class="vlb"></div>
+        </div>
+        <div class="pure-g">
+          <div class="pure-u-md-1"><h3 id="southbound-two">Southbound</h3></div>
+        </div>
       </div>
-
       <div id="threeTrainCard">
-        <div class="northbound" id="northbound-three"><h2>Northbound</h2></div>
-        <img class="routeImage" src="assets/images/3train.png" alt="3 Train" />
-        <div class="southbound" id="southbound-three"><h2>Southbound</h2></div>
+        <div class="pure-g">
+          <div class="pure-u-md-1">
+            <h3 id="northbound-three">Northbound</h3>
+          </div>
+        </div>
+        <div class="pure-g">
+          <div class="vl"></div>
+        </div>
+        <div class="pure-g" style="padding: 0;">
+          <div class="pure-u-md-1 mainNumber"><h2>3</h2></div>
+        </div>
+        <div class="pure-g">
+          <div class="vlb"></div>
+        </div>
+        <div class="pure-g">
+          <div class="pure-u-md-1">
+            <h3 id="southbound-three">Southbound</h3>
+          </div>
+        </div>
       </div>
-
-      <div id="routeCards">
-        <div id="messageCardOneTrain">
-          <div id="chatOneTrain"></div>
-          <div id="twitterOneTrain">
-            <a
-              class="twitter-timeline"
-              href="https://twitter.com/NYCTSubway?ref_src=twsrc%5Etfw"
-              >Tweets by NYCTSubway</a
-            >
-            <script
-              async
-              src="https://platform.twitter.com/widgets.js"
-              charset="utf-8"
-            ></script>
-          </div>
-        </div>
-
-        <div id="messageCardTwoTrain">
-          <div id="chatOneTrain"></div>
-          <div id="twitterOneTrain">
-            <a
-              class="twitter-timeline"
-              href="https://twitter.com/NYCTSubway?ref_src=twsrc%5Etfw"
-              >Tweets by NYCTSubway</a
-            >
-            <script
-              async
-              src="https://platform.twitter.com/widgets.js"
-              charset="utf-8"
-            ></script>
-          </div>
-        </div>
-
-        <div id="messageCardThreeTrain">
-          <div id="chatOneTrain"></div>
-          <div id="twitterOneTrain">
-            <a
-              class="twitter-timeline"
-              href="https://twitter.com/NYCTSubway?ref_src=twsrc%5Etfw"
-              >Tweets by NYCTSubway</a
-            >
-            <script
-              async
-              src="https://platform.twitter.com/widgets.js"
-              charset="utf-8"
-            ></script>
-          </div>
-        </div>
+      <div class="pure-g back">
+        <h4>&#10094; BACK</h4>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/app.js"></script>
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="assets/javascript/app.js"></script>
 </html>
