--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <div class="pure-g">
         <div class="pure-u-5-5 header"><h1>Subway Stories</h1></div>
       </div>
+      <div class="pure-g weather">
+        <h5 id="currentweather"></h5>
+      </div>
       <div class="pure-g numberChoices">
         <div class="pure-u-md-1-3 mainNumber" id="oneTrain"><h2>1</h2></div>
         <div class="pure-u-md-1-3 mainNumber" id="twoTrain"><h2>2</h2></div>
@@ -78,11 +81,22 @@
           </div>
         </div>
       </div>
-      <div class="pure-g back">
+      <div class="pure-g back" id="backnav">
         <h4>&#10094; BACK</h4>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/app.js"></script>
+    <script>
+      var weatherURL =
+        "http://api.weatherapi.com/v1/current.json?key=be0c4ef8958e4be892a15652191312&q=new york";
+
+      $.ajax(weatherURL).done(function(response) {
+        $("#currentweather").append(`<img
+            src="https:${response.current.condition.icon}"
+            width="20%"
+          /> ${Math.round(response.current.temp_f)} &#8457;`);
+      });
+    </script>
   </body>
 </html>
