--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <div class="pure-u-md-1-3 mainNumber" id="twoTrain"><h2>2</h2></div>
         <div class="pure-u-md-1-3 mainNumber" id="threeTrain"><h2>3</h2></div>
       </div>
+      <div class="pure-g">
+        <a
+          class="twitter-timeline"
+          href="https://twitter.com/subwaystats"
+          data-tweet-limit="3"
+          data-width="399"
+        ></a>
+      </div>
+
       <div id="oneTrainCard">
         <div class="pure-g">
           <div class="pure-u-md-1"><h3 id="northbound-one">Northbound</h3></div>
@@ -89,14 +98,19 @@
     <script src="assets/javascript/app.js"></script>
     <script>
       var weatherURL =
-        "http://api.weatherapi.com/v1/current.json?key=be0c4ef8958e4be892a15652191312&q=new york";
+        "https://api.weatherapi.com/v1/current.json?key=be0c4ef8958e4be892a15652191312&q=new york";
 
       $.ajax(weatherURL).done(function(response) {
         $("#currentweather").append(`<img
             src="https:${response.current.condition.icon}"
             width="20%"
-          /> ${Math.round(response.current.temp_f)} &#8457;`);
+          /> ${Math.round(response.current.temp_f)}&#8457;`);
       });
     </script>
+    <script
+      async
+      src="http://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
   </body>
 </html>
