--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         <div class="pure-u-md-1-3 mainNumber" id="twoTrain"><h2>2</h2></div>
         <div class="pure-u-md-1-3 mainNumber" id="threeTrain"><h2>3</h2></div>
       </div>
-      <div class="pure-g">
+      <div class="pure-g" id="tweets">
         <a
           class="twitter-timeline"
           href="https://twitter.com/subwaystats"
           data-tweet-limit="3"
-          data-width="399"
+          data-width="70%"
+          data-theme="dark"
         ></a>
       </div>
 
