--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <div class="pure-u-md-1-3 mainNumber" id="threeTrain"><h2>3</h2></div>
       </div>
       <div class="pure-g" id="tweets">
-
         <a
           class="twitter-timeline"
           href="https://twitter.com/subwaystats"
@@ -98,7 +97,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/app.js"></script>
-   <script>
+    <script>
       var weatherURL =
         "https://api.weatherapi.com/v1/current.json?key=be0c4ef8958e4be892a15652191312&q=new york";
 
@@ -111,7 +110,7 @@
     </script>
     <script
       async
-      src="http://platform.twitter.com/widgets.js"
+      src="https://platform.twitter.com/widgets.js"
       charset="utf-8"
     ></script>
   </body>
