--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/app.js"></script>
-   <script>
+    <script>
       var weatherURL =
         "https://api.weatherapi.com/v1/current.json?key=be0c4ef8958e4be892a15652191312&q=new york";
 
@@ -111,7 +111,7 @@
     </script>
     <script
       async
-      src="http://platform.twitter.com/widgets.js"
+      src="https://platform.twitter.com/widgets.js"
       charset="utf-8"
     ></script>
   </body>
