feat: Impliment chat functionality for each subway line

--- a/public/chat.html
+++ b/public/chat.html
@@ -20,7 +20,7 @@
       content="Learn how to use the Firebase platform on the Web"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friendly Chat</title>
+    <title>Subway Stories</title>
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no" />
@@ -125,7 +125,6 @@
           });
       })(addEventListener, removeEventListener);
     </script>
-    -->
   </head>
   <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -232,6 +231,8 @@
     <script src="/__/firebase/7.6.0/firebase-firestore.js"></script>
     <script src="/__/firebase/7.6.0/firebase-performance.js"></script>
     <script src="/__/firebase/init.js"></script>
-
+    
     <script src="assets/javascript/main.js"></script>
+  
   </body>
+</html>
