--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
       </div>
       <div id="oneTrainCard">
         <div class="pure-g">
-          <div class="pure-u-md-1"><h3 id="northbound-one">Northbound</h3></div>
+          <div class="pure-u-md-1">
+            <a href="chat.html"><h3 id="northbound-one">Northbound</h3></a>
+          </div>
         </div>
         <div class="pure-g">
           <div class="vl"></div>
@@ -37,12 +39,16 @@
           <div class="vlb"></div>
         </div>
         <div class="pure-g">
-          <div class="pure-u-md-1"><h3 id="southbound-one">Southbound</h3></div>
+          <div class="pure-u-md-1">
+            <a href="chat.html"><h3 id="southbound-one">Southbound</h3></a>
+          </div>
         </div>
       </div>
       <div id="twoTrainCard">
         <div class="pure-g">
-          <div class="pure-u-md-1"><h3 id="northbound-two">Northbound</h3></div>
+          <div class="pure-u-md-1">
+            <a href="chat.html"><h3 id="northbound-two">Northbound</h3></a>
+          </div>
         </div>
         <div class="pure-g">
           <div class="vl"></div>
@@ -54,13 +60,15 @@
           <div class="vlb"></div>
         </div>
         <div class="pure-g">
-          <div class="pure-u-md-1"><h3 id="southbound-two">Southbound</h3></div>
+          <div class="pure-u-md-1">
+            <a href="chat.html"><h3 id="southbound-two">Southbound</h3></a>
+          </div>
         </div>
       </div>
       <div id="threeTrainCard">
         <div class="pure-g">
           <div class="pure-u-md-1">
-            <h3 id="northbound-three">Northbound</h3>
+            <a href="chat.html"><h3 id="northbound-three">Northbound</h3></a>
           </div>
         </div>
         <div class="pure-g">
@@ -74,7 +82,7 @@
         </div>
         <div class="pure-g">
           <div class="pure-u-md-1">
-            <h3 id="southbound-three">Southbound</h3>
+            <a href="chat.html"><h3 id="southbound-three">Southbound</h3></a>
           </div>
         </div>
       </div>
