feat: Implement chat functionality for each subway line (#24)
* created initial files for the chat also edited file paths

* feat: Impliment chat functionality for each subway line

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,9 @@
 
       <div id="oneTrainCard">
         <div class="pure-g">
-          <div class="pure-u-md-1"><h3 id="northbound-one">Northbound</h3></div>
+          <div class="pure-u-md-1">
+            <a href="chat.html"><h3 id="northbound-one">Northbound</h3></a>
+          </div>
         </div>
         <div class="pure-g">
           <div class="vl"></div>
@@ -51,12 +53,16 @@
           <div class="vlb"></div>
         </div>
         <div class="pure-g">
-          <div class="pure-u-md-1"><h3 id="southbound-one">Southbound</h3></div>
+          <div class="pure-u-md-1">
+            <a href="chat.html"><h3 id="southbound-one">Southbound</h3></a>
+          </div>
         </div>
       </div>
       <div id="twoTrainCard">
         <div class="pure-g">
-          <div class="pure-u-md-1"><h3 id="northbound-two">Northbound</h3></div>
+          <div class="pure-u-md-1">
+            <a href="chat.html"><h3 id="northbound-two">Northbound</h3></a>
+          </div>
         </div>
         <div class="pure-g">
           <div class="vl"></div>
@@ -68,13 +74,15 @@
           <div class="vlb"></div>
         </div>
         <div class="pure-g">
-          <div class="pure-u-md-1"><h3 id="southbound-two">Southbound</h3></div>
+          <div class="pure-u-md-1">
+            <a href="chat.html"><h3 id="southbound-two">Southbound</h3></a>
+          </div>
         </div>
       </div>
       <div id="threeTrainCard">
         <div class="pure-g">
           <div class="pure-u-md-1">
-            <h3 id="northbound-three">Northbound</h3>
+            <a href="chat.html"><h3 id="northbound-three">Northbound</h3></a>
           </div>
         </div>
         <div class="pure-g">
@@ -88,7 +96,7 @@
         </div>
         <div class="pure-g">
           <div class="pure-u-md-1">
-            <h3 id="southbound-three">Southbound</h3>
+            <a href="chat.html"><h3 id="southbound-three">Southbound</h3></a>
           </div>
         </div>
       </div>
