--- a/public/chat.html
+++ b/public/chat.html
@@ -130,14 +130,14 @@
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <!-- Header section containing logo -->
       <header
-        class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700"
+        class="mdl-layout__header mdl-color-text--white mdl-color--blue-grey-900 "
       >
         <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
           <div
             class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop"
           >
             <h3>
-              <i class="material-icons">chat_bubble_outline</i> Friendly Chat
+              <i class="material-icons">chat_bubble_outline</i> Subway Stories
             </h3>
           </div>
           <div id="user-container">
@@ -160,7 +160,7 @@
         </div>
       </header>
 
-      <main class="mdl-layout__content mdl-color--grey-100">
+      <main class="mdl-layout__content mdl-color--grey-900">
         <div
           id="messages-card-container"
           class="mdl-cell mdl-cell--12-col mdl-grid"
@@ -168,6 +168,7 @@
           <!-- Messages container -->
           <div
             id="messages-card"
+            style="width: 80%; margin: auto"
             class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--6-col-tablet mdl-cell--6-col-desktop"
           >
             <div class="mdl-card__supporting-text mdl-color-text--grey-600">
@@ -231,8 +232,7 @@
     <script src="/__/firebase/7.6.0/firebase-firestore.js"></script>
     <script src="/__/firebase/7.6.0/firebase-performance.js"></script>
     <script src="/__/firebase/init.js"></script>
-    
+
     <script src="assets/javascript/main.js"></script>
-  
   </body>
 </html>
