--- a/public/index.html
+++ b/public/index.html
@@ -12,22 +12,38 @@
       integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="mainContainer">
       <div class="pure-g">
         <div class="pure-u-5-5 header"><h1>Subway Stories</h1></div>
       </div>
-      <div class="pure-g weather">
-        <h5 id="currentweather"></h5>
+      <div class="pure-g top">
+        <div class="pure-u-md-1-2">
+          <button id="uberbtn">
+            <i class="material-icons" style="padding-right: 5px;">drive_eta</i>
+            <a
+              href=" https://m.uber.com/ul/?client_id=<CLIENT_ID>"
+              target="_blank"
+              >Request an UBER</a
+            >
+          </button>
+        </div>
+        <div class="pure-u-md-1-2 weather">
+          <h5 id="currentweather"></h5>
+        </div>
       </div>
+
       <div class="pure-g numberChoices">
         <div class="pure-u-md-1-3 mainNumber" id="oneTrain"><h2>1</h2></div>
         <div class="pure-u-md-1-3 mainNumber" id="twoTrain"><h2>2</h2></div>
         <div class="pure-u-md-1-3 mainNumber" id="threeTrain"><h2>3</h2></div>
       </div>
       <div class="pure-g" id="tweets">
-
         <a
           class="twitter-timeline"
           href="https://twitter.com/subwaystats"
